--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,28 @@
 services:
   - type: worker
     name: loader-start-worker
-    env: python
+    runtime: python
     plan: starter
     buildCommand: pip install -r requirements.txt
     startCommand: python loader_start_worker.py
     envVars:
-      - key: PYTHON_VERSION
-        value: 3.11.9
+      - key: DATABASE_URL
+        fromDatabase:
+          name: safari-franklin-one
+          property: connectionString
+      - key: POLL_SECONDS
+        value: "2"
+
+  - type: worker
+    name: loader-end-worker
+    runtime: python
+    plan: starter
+    buildCommand: pip install -r requirements.txt
+    startCommand: python loader_end_worker.py
+    envVars:
+      - key: DATABASE_URL
+        fromDatabase:
+          name: safari-franklin-one
+          property: connectionString
+      - key: POLL_SECONDS
+        value: "2"
