--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: safari-franklin-one
+          name: safari_franklin_one
           property: connectionString
       - key: POLL_SECONDS
         value: "2"
@@ -22,7 +22,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: safari-franklin-one
+          name: safari_franklin_one
           property: connectionString
       - key: POLL_SECONDS
         value: "2"
