--- a/render.yaml
+++ b/render.yaml
@@ -7,9 +7,7 @@ services:
     startCommand: python loader_start_worker.py
     envVars:
       - key: DATABASE_URL
-        fromDatabase:
-          name: dpg-d0htaoumcj7s739g9r70-a
-          property: connectionString
+        sync: false
       - key: POLL_SECONDS
         value: "2"
 
@@ -21,8 +19,6 @@ services:
     startCommand: python loader_end_worker.py
     envVars:
       - key: DATABASE_URL
-        fromDatabase:
-          name: dpg-d0htaoumcj7s739g9r70-a
-          property: connectionString
+        sync: false
       - key: POLL_SECONDS
         value: "2"
