--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: worker
     name: loader-combined-worker
     runtime: python
+    pythonVersion: 3.11.9
     plan: starter
     buildCommand: pip install -r requirements.txt
     startCommand: python loader_combined_worker.py
